# zfs-dbus

./: dune-project  flake.nix  libnvpair.opam  libzfs.opam  libzfs.opam.locked  zfs_dbus.opam  zfs_dbus.opam.locked
.github/workflows/: ci.yaml
lib/: dune  zfs_dbus.ml  zfs_dbus.mli  zfs_dbus.obus  zfs_pool.ml  zfs_pool.mli
libnvpair/: dune  function_description.ml  nvlist.ml  nvlist.mli  type_description.ml
libnvpair/src/: dune  function_description.ml  nvlist.ml  nvlist.mli  type_description.ml
libnvpair/test/: dune  nvlist_tests.ml  tests.ml
libzfs/: README.md
libzfs/config/: discover.ml  dune
libzfs/ffi/bindings/: dune  libnvpair_bindings.ml  libzfs_bindings.ml  nvpair_types.ml  zfs_types.ml
libzfs/ffi/lib/: dune  m.ml
libzfs/ffi/stubgen/: dune  ffi_stubgen.ml
libzfs/src/: NV.ml  NVPair.ml  compression.ml  compression.mli  dataset.ml  dataset.mli  dune  nvlist.ml  nvlist.mli  nvpair.ml  nvpair.mli  property_key.ml  property_key.mli  property_map.ml  property_map.mli  recordsize.ml  recordsize.mli  utils.ml  version.mli  zfs.ml  zfs.mli  zfs_exception.ml  zfs_exception.mli  zfs_property.ml  zfs_property.mli  zpool.ml  zpool.mli
libzfs/test/: assertions.ml  assertions.mli  dataset_tests.ml  dune  generators.ml  generators.mli  helpers.ml  helpers.mli  lib_tests.ml  nvlist_tests.ml  nvpair_tests.ml  property_map_tests.ml  simple_record.ml  testables.ml  testables.mli  tests.ml  zpool_tests.ml
libzfs/test/.github/workflows/: ci.yaml
libzfs/types/bindings/: dune  nvpair_types.ml  nvpair_types.mli
libzfs/types/lib/: dune  m.ml
libzfs/types/stubgen/: dune  ffi_types_stubgen.ml
test/: dune
